2024-04-05 "GOLD RUSH"
 * Build & implementation changes:
   * Now fetches and uses the fujinet network library.
     https://github.com/FujiNetWIFI/fujinet-lib
     (h/t Frank Rachel)
 * Other improvements:
   * Slightly faster text blitting

2022-05-29 "ARGONAUTS"
 * Implementation changes:
   * Now uses #FujiNet firmware's built-in JSON fetching & parsing
     functionality.
     (https://github.com/FujiNetWIFI/fujinet-platformio/wiki/JSON-Query-Format)
     (Note: Requires fujinet-platformio firmware as of commit
     "5785d76860245863254f91736d42f6c0f61182c6", 2022-05-29)

2021-05-21 "BORDERS"
 * Visual improvements:
   * Black (rather than ocean blue) screen borders
   * Different color for text window at the bottom (better contrast)
   * Astronaut names will word-wrap if necessary

2021-05-19 "VIVID"
 * New features:
   * Can pull data from "Where the ISS?" to track upcoming
     positions on the map. (Press [T])
   * Auto-refresh ISS's position (now press [R] to refresh manually)
   * Previous ISS positions leave a trail (of sprites)
   * Audible feedback when interacting with the program
 * Visual improvements:
   * Improved default map colors; removed grid from continents
   * Faster and nicer looking text blitting over the map
   * Nicer color-cycling of ISS sprite
   * Label latitude (N/North) & longitude (E/East)
 * Build changes:
   * New STARTADDRESS (so folks who forget to disable BASIC can
     run it)

2021-05-18 "OVERCAST"
 * Initial release
   + Displays map, fetches ISS position and can show who's in space
     (both via data from "Open-Notify")
